--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Akib Islam | Portfolio</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="frontend/style.css">
 </head>
 <body>
 
@@ -63,6 +63,6 @@
     <p>&copy; 2025 Akib Islam | <a href="https://github.com/ak-ake" target="_blank">GitHub</a></p>
 </footer>
 
-<script src="main.js"></script>
+<script src="frontend/main.js"></script>
 </body>
 </html>
